# qplanning

./: CMakeLists.txt  Control.cpp  Control.h  KeyValue.h  MainWindow.cpp  MainWindow.h  ProjectHome.md  QPlanning.pro  SubjectData.h  SubjectDataWindow.cpp  SubjectDataWindow.h  TimeTable.h  TimeTableWindow.cpp  TimeTableWindow.h  TimeTableWindow.ui  XmlPlanning.cpp  XmlPlanning.h  XmlSpec.DTD  XmlSpec.xsd  define.h  indent_config  test.xml
branches/new_sql_model/: QPlanning.pro
branches/new_sql_model/doc/: CMakeLists.txt
branches/new_sql_model/src/: AbstractSqlTable.h  AdvencedItemDelegate.cpp  AsyncTableWidget.cpp  AsyncTableWidget.h  Control.cpp  Control.h  DrawTimetable.cpp  FullTimetable.h  LevelTable.cpp  LevelTable.h  MainWindow.cpp  MainWindow.h  MyCheckBox.h  QGraphicsItemBoundedText.cpp  QGraphicsItemBoundedText.h  SqlModelGenerating.h  SqlTable.cpp  TimeTableWindow.cpp  TimeTableWindow.h  TimeTableWindow.ui  XmlPlanning.cpp  define_cmake.h.cmake
branches/new_sql_model/ts/: CMakeLists.txt
branches/qplanning_0_1_0beta/: CMakeLists.txt
branches/qplanning_0_1_0beta/src/: CMakeLists.txt  Control.h  MainWindow.cpp  MainWindow.h  QGraphicsItemBoundedText.cpp  QGraphicsItemBoundedText.h  SubjectData.h  SubjectDataWindow.cpp  SubjectDataWindow.h  TimeTable.h  TimeTableWindow.cpp  XmlPlanning.h
doc/: CMakeLists.txt  sql_diagram.dia
src/: AbstractSqlTable.cpp  AbstractSqlTable.h  AsyncListView.cpp  AsyncListView.h  AsyncTableWidget.cpp  AsyncTableWidget.h  CMakeLists.txt  Control.cpp  Control.h  DrawTimetable.cpp  DrawTimetable.h  KeyValue.h  LevelTable.cpp  LevelTable.h  MainWindow.cpp  MainWindow.h  MyCheckBox.cpp  QGraphicsItemBoundedText.cpp  QGraphicsItemBoundedText.h  SqlModelGenerating.cpp  SqlModelGenerating.h  SqlTable.cpp  SqlTable.h  StreachedHeaderView.cpp  StreachedHeaderView.h  SubjectData.h  SubjectDataWindow.cpp  SubjectDataWindow.h  SubjectDataWindow.ui  SubjectTable.cpp  SubjectTable.h  TimeTable.h  TimeTableWindow.cpp  TimeTableWindow.h  TimeTableWindow.ui  XmlPlanning.cpp  XmlPlanning.h  define.h  define_cmake.h.cmake  main.cpp
trunk/: CMakeLists.txt  Control.cpp  Control.h  KeyValue.h  MainWindow.cpp  MainWindow.h  QPlanning.pro  SubjectDataWindow.cpp  SubjectDataWindow.h  TimeTableWindow.cpp  TimeTableWindow.h  TimeTableWindow.ui  XmlPlanning.cpp  XmlPlanning.h  XmlSpec.xsd  define.h  main.cpp  test.xml
trunk/doc/: CMakeLists.txt  Doxyfile
trunk/src/: AbstractSqlTable.cpp  AbstractSqlTable.h  AdvencedItemDelegate.cpp  AdvencedItemDelegate.h  AsyncListView.cpp  AsyncListView.h  AsyncTableWidget.cpp  AsyncTableWidget.h  CMakeLists.txt  Control.cpp  Control.h  DrawTimetable.cpp  DrawTimetable.h  FullTimetable.h  LevelTable.cpp  LevelTable.h  MainWindow.cpp  MainWindow.h  QGraphicsItemBoundedText.cpp  SqlModelGenerating.cpp  SqlModelGenerating.h  SubjectData.h  SubjectDataWindow.cpp  SubjectDataWindow.h  TimeTable.h  TimeTableWindow.cpp  TimeTableWindow.h  TimeTableWindow.ui  XmlPlanning.cpp  XmlPlanning.h  debug_printf.cpp  debug_printf.h  define.h  main.cpp
trunk/ts/: CMakeLists.txt  QPlanning_fr.ts
ts/: CMakeLists.txt  QPlanning_fr.ts
